new/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    lra_chart: lra_kubernetes-0.10.7
    service: b-pms-v1-vaultmanagement
    serviceVersion: b-pms-v1-vaultmanagement-c318f2a5e
  name: b-pms-v1-vaultmanagement-c318f2a5e
spec:
  selector:
    matchLabels:
      app: name
  progressDeadlineSeconds: 1300
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: name
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/openshift/httpd
          ports:
          - containerPort: 8080
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - '-c'
                  - >-
                    curl -X POST localhost:15000/drain_listeners?inboundonly;
                    while [ $(netstat -plunt | grep tcp | grep -v envoy | grep
                    -v pilot-agent | wc -l | xargs) -ne 0 ]; do sleep 1; done
          livenessProbe:
            httpGet: # <--- Handler type specified here
              path: /healthz
              port: 8080
            failureThreshold: 6
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 300
          name: b-pms-v1-vaultmanagement-c318f2a5e
          ports:
            - containerPort: 50051
              name: grpc
              protocol: TCP
            - containerPort: 4040
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet: # <--- Handler type specified here
              path: /ready
              port: 8080
            failureThreshold: 3
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 300
          resources:
            limits:
              cpu: 250m
              memory: 512M
            requests:
              cpu: 100m
              memory: 512M
          startupProbe:
            httpGet: # <--- Handler type specified here
              path: /healthz
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 17
            successThreshold: 1
            timeoutSeconds: 17
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: pms.vault
      serviceAccountName: pms.vault
      terminationGracePeriodSeconds: 30
